--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,12 +3,6 @@
     background-color: #f2f8ff;
 }
 
-.bg-bluesky {
-    background-color: #4d94e0;
-    color: #ffff;
-    height: 30px;
-}
-
 .bg-bluetray {
     background-color: #4d94e0;
     color: white;
@@ -21,26 +15,42 @@
 
 /* for jumbotron */
 .jumbotron {
+    background: black;
     background-image: url(https://admin.workforce.com/wp-content/uploads/sites/2/2018/12/AI-is-coming-%E2%80%94-and-HR-is-not-prepared.jpg);
     background-size: cover;
     height: 670px;
+    background-position: center;
+    color: #ffff;
+    position: relative;
 }
 
-.jumbotron .container {
-    color: white;
-    text-align: right;
-    margin-top: 100px;
+.jumbotron::after {
+    content: '';
+    display: block;
+    width: 100%;
+    height: 50%;
+    position: absolute;
+    background-image: linear-gradient(to top, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
+    left: 0;
+    bottom: 0;
+}
+
+.jumbotron h1 {
+    position: relative;
+    z-index: 1;
+    margin: 30px 0;
+    font-size: 75px;
+    line-height: 1.5;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.6);
 }
 
 .jumbotron a {
-    margin-right: 120px;
-    text-align: center;
-    font-family: OpenSans-Regular;
-    font-size: 30px;
+    font-size: 25px;
+    position: relative;
+    z-index: 1;
     color: white;
     border-radius: 15px;
     padding: 10px 30px;
-    margin-left: 80px;
     background: #8db70e;
 }
 
