--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -157,6 +157,24 @@
     }
 }
 
+/* introduce contain*/
+/*for title text of container*/
+.title-me {
+    font-size: 30px !important;
+    text-align: center;
+}
+
+@media (min-width: 768px) {
+    .title-me {
+        font-size: 50px !important;
+    }
+
+    .lead {
+        margin: 30px 0 0 0;
+        font-size: 40px !important;
+    }
+}
+
 /* for visi misi */
 .container-visi {
     padding: 10px;
@@ -167,6 +185,8 @@
     background-color: grey;
     position: relative;
     transition: transform 0.5s;
+
+    margin-bottom: 20px !important;
 }
 
 .container-visi:hover {
@@ -197,6 +217,7 @@
     background-color: grey;
     position: relative;
     transition: transform 0.5s;
+    margin-top: 20px !important;
 }
 
 .container-misi:hover {
@@ -251,9 +272,18 @@
     height: 87px;
 }
 
-/*for title text of container*/
-.title-me {
-    font-size: 23px;
+.leader-contain .figure-down figure img:active,
+.leader-contain .figure-down figure a:visited img {
+    margin: -32px 0px;
+    opacity: 1;
+    width: 107px;
+    height: 107px;
+}
+
+.leader-contain .my-img {
+    height: 500px;
+    width: 400px;
+    max-height: 100% !important;
 }
 
 /*for img of parntership */
