--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -49,6 +49,10 @@
     background-color: #eee !important;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 /*background*/
 .bg-lightblue {
     background-color: #f2f8ff;
@@ -108,6 +112,11 @@
     .control-right-bottom {
         right: -70px !important;
     }
+
+    .lead {
+        font-size: 40px !important;
+        font-weight: 400 !important;
+    }
 }
 
 /*tombol back up*/
@@ -146,11 +155,11 @@ html {
 
 /*
 .link:hover::after {
-    content: '';
-    display: block;
-    border-bottom: 3px solid #4d94e0;
-    width: 50%;
-    margin: auto;
+        content: '';
+        display: block;
+        border-bottom: 3px solid #4d94e0;
+        width: 50%;
+        margin: auto;
 }
 */
 /* for jumbotron */
