--- a/assets/css/produk.css
+++ b/assets/css/produk.css
@@ -123,6 +123,45 @@ html {
     opacity: 0;
 }
 
+@media (max-width: 992px) {
+    .nav-item .nav-shop:before {
+        left: 16px;
+    }
+
+    .nav-item .nav-shop {
+        text-align: left;
+        margin: 0 !important;
+    }
+
+
+    .nav-item .btn {
+        max- width: 15%;
+    }
+}
+
+@media (min-width: 768px) and (max-width: 992px) {
+    .navbar-nav form {
+        margin-left: 50px !important;
+    }
+
+    .nav-item {
+        margin-left: 50px !important;
+    }
+
+    .nav-item .nav-shop {
+        text-align: left;
+        margin: 0 !important;
+    }
+
+    .nav-item .btn {
+        border-radius: 10px !important;
+    }
+
+    .nav-item .nav-shop:before {
+        left: 16px;
+    }
+}
+
 .nav-item .nav-shop.zero::before {
     opacity: 1;
 }
